# vnpy_tora

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_tora/: __init__.py  toraoption_gateway.py  torastock_gateway.py
vnpy_tora/api/: __init__.py  tora_constant.py
vnpy_tora/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py  toramd_constant.py  toramd_md_header_define.h  toramd_md_header_function.h  toramd_md_header_on.h  toramd_md_header_process.h  toramd_md_source_function.cpp  toramd_md_source_module.cpp  toramd_md_source_on.cpp  toramd_md_source_process.cpp  toramd_md_source_switch.cpp  toramd_md_source_task.cpp  toramd_struct.py  toramd_typedef.py  toraoption_constant.py  toraoption_struct.py  toraoption_td_header_define.h  toraoption_td_header_function.h  toraoption_td_header_on.h  toraoption_td_header_process.h  toraoption_td_source_function.cpp  toraoption_td_source_module.cpp  toraoption_td_source_on.cpp  toraoption_td_source_process.cpp  toraoption_td_source_switch.cpp  toraoption_td_source_task.cpp  toraoption_typedef.py  torastock_constant.py  torastock_struct.py  torastock_td_header_define.h  torastock_td_header_function.h  torastock_td_header_on.h  torastock_td_header_process.h  torastock_td_source_function.cpp  torastock_td_source_module.cpp  torastock_td_source_on.cpp  torastock_td_source_process.cpp  torastock_td_source_switch.cpp  (+2 more)
vnpy_tora/api/include/tora/: TORATstpSPTraderApi.h  TORATstpSPUserApiDataType.h  TORATstpSPUserApiStruct.h  TORATstpTraderApi.h  TORATstpUserApiDataType.h  TORATstpUserApiStruct.h  TORATstpXMdApi.h  TORATstpXMdApiStruct.h
vnpy_tora/api/libs/: sptraderapi.lib  traderapi.lib  xmdapi.lib
vnpy_tora/api/option/: __init__.py  spmdapi.py  sptraderapi.py
vnpy_tora/api/stock/: __init__.py  _xmdapi.cp37-win_amd64.pyd  lev2mdapi.py  traderapi.py  xmdapi.py
vnpy_tora/api/vntora/: vntora.h  vntora.sln
vnpy_tora/api/vntora/vntoramd/: vntoramd.cpp  vntoramd.h  vntoramd.vcxproj  vntoramd.vcxproj.filters
vnpy_tora/api/vntora/vntoraoption/: vntoraoption.cpp  vntoraoption.h  vntoraoption.vcxproj  vntoraoption.vcxproj.filters
vnpy_tora/api/vntora/vntorastock/: vntorastock.cpp  vntorastock.h  vntorastock.vcxproj  vntorastock.vcxproj.filters
vnpy_tora/gateway/: __init__.py  terminal_info_linux.py  terminal_info_windows.py  tora_option_gateway.py  tora_stock_gateway.py
vnpy_tora/stock_api/: __init__.py  _lev2mdapi.cp37-win_amd64.pyd  _xmdapi.pyd
